backend; integration tests for user creation; jest config

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
 
     <script defer module src="main.js"></script>
 
-    <title>Midtrater</title>
+    <title>midtrater</title>
   </head>
   <body>
     <div id="root"></div>
